--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
 header{
     max-width: 1140px;
     background: green;
+    margin: 0 auto;
 }
 
 nav{
@@ -14,6 +15,7 @@ nav{
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    
 }
 .logo{
     font-size: 28px;
